--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Maha Vikas Group</title>
-    <meta
-      name="description"
-      content="Alpha Tech System specializes in battery and inverter sales, repair, maintenance, and complete power backup solutions. We work with agents and distributors to provide trusted UPS and battery services."
-    />
+    <meta name="description" content="Promoting digital transformation across government departments." />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
